--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "homepage": "https://ICSLAB822.github.io/ics-lab-portal",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "prebuild": "node scripts/generate-index.js",
+    "build": "npm run prebuild && tsc && vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "cobe": "^0.6.3",
+    "js-yaml": "^4.1.1",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
