--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,8 @@ jobs:
         with:
           node-version: 20
           cache: npm
-      - run: npm ci
+      - run: npm cache clean --force
+      - run: npm ci --include=optional
       - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
