修复 GitHub Actions 构建错误：使用 npm install 替代 npm ci --include=optional

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
-      - run: npm cache clean --force
-      - run: npm ci --include=optional
+      - run: npm install --legacy-peer-deps
       - run: npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
